# NLP-Cyber-NER

./: .gitignore  Makefile  README.md  big_boy_train.job  pyproject.toml  requirements.txt  train.job
data/eval/: train-aptner-eval-aptner.txt  train-big_model-eval-aptner.txt  train-big_model-eval-cyner.txt  train-cyner-cyner.txt  train-cyner-eval-cyner.txt
data/interim/APTNer/: APTNERdev.cleaned  APTNERtest.cleaned  APTNERtrain.cleaned  APTNERtrain.txt
data/interim/DNRTI/: test.cleaned  test.txt  train.cleaned  train.txt  valid.cleaned  valid.txt
docs/: folderstructure.md
envs/: bert_lstner_requirements.yaml  dev_requirements.txt  prod_requirements.yaml  prod_requirements_unlocked.yam
nlp_cyber_ner/: __init__.py  config.py  dataset.py  features.py  lookup.html  lookup2.html  lst_ner_dataset.py  lst_ner_evaluation.py  lst_ner_utils.py  plots.py  span_f1.py
nlp_cyber_ner/modeling/: big_boy_train.py  combined_dataset_model.py  compute_fn_ratios.py  cross_dataset_model.py  lst_ner_model.py  predict.py  train.py  train_bert_baseline.py  train_lst_ner.py  train_referencetokenmodel.py  train_tokenmodel_sepEMB_sepLSTM.py  train_tokenmodel_sepEMB_tiedLSTM.py  train_tokenmodel_tiedEMB_sepLSTM.py  train_tokenmodel_tiedEMB_tiedLSTM.py
notebooks/: Deduplication_to_tensor.ipynb  big_boy_analysis.ipynb  languagemetrics.ipynb  project.ipynb  tokensetup.ipynb
notebooks/langaugemetricssheets/: divergence_results.xlsx  js_correlation.xlsx
proj/: project.ipynb  test.iob2
scripts/itu_hpc/: cross_datasets_model.job  train_combined_dataset_model.job
(+37 files in other folders)
