[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlp_cyber_ner"
version = "0.0.1"
description = "Cybersecurity NER"
authors = [{ name = "Maciej Jalocha" }]

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["nlp_cyber_ner"]
include = ["pyproject.toml", "nlp_cyber_ner/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nlp_cyber_ner"]
force-sort-within-sections = true
